bench+docs: 2.0 收尾——事件契约基准口径/gc 对照入档/CLAUDE.md×3+README 同步
基准口径迁移：BenchPipeBridge.replay()（攒 List 过渡形态）→ replayCounting()
（零分配 sink c->{} 计数交付条数）；PipePathBenchmark.replayBucket 返回 long；
AssembleMemoryBenchmark no-op listener 迁到 onEvent 零操作形态。

gc 前后对照入档（docs/benchmarks-baseline.md 2.0 段）：replayBucket 同档
-f 1 -w 3s -r 5s -prof gc，gc.alloc.rate.norm 99,889,660.223±440.242 →
99,856,145.687±505.797 B/op（Δ≈32.7 KiB/op，即旧口径 2000 元素 ArrayList
攒集份额；List.copyOf/Transaction 封箱从未在本基准面）；avgt CI 重叠无显著
变化；assembleWholeCorpus 复测 0.925±0.331 ms/轮与 1.7/1.7.1 基线同量级；
"堆峰 O(单条)"以结构论证单列，不与分配率数字混同。

文档同步：根 CLAUDE.md（2.0 里程碑状态/数据流/Main 接线/vb.output.mode
配置表/内存有界性 STREAMING O(单条) vs BLOCK O(事务)+ArrayList 高水位/
158 用例/五基准）、replication/CLAUDE.md（事务输出契约族七节 + consumer/
replayer 2.0 形态 + TxBuffer.unitCount + 线程模型）、README（输出契约/
配置表/changes=N 口径注记/路线 2.0 完成）、src/jmh/CLAUDE.md（五基准表）。

mvn -Pjmh clean test-compile 通过；mvn clean test 158/158 全绿。

Co-Authored-By: Claude <noreply@anthropic.com>